--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,14 @@
             android:src="@drawable/monster_animation"
             />
 
+        <ImageView
+            android:id="@+id/wait_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_more_horiz_black_24dp"
+            />
+
     </LinearLayout>
 
     <LinearLayout
@@ -33,6 +41,7 @@
         >
 
         <ImageView
+            android:id="@+id/replayButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="20"
